--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-iframe": "^1.8.5",
     "react-router-dom": "^6.11.1",
+    "react-scroll": "^1.8.9",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
